# Lifemap_clean

./: make_tree.py  pyproject.toml  update_lifemap.sh
conf/: .pgpass
tree/: Additional.info.py  AdditionalInfo.py  CombineJsons.py  ConvertAndCompress.R  CreateIndex.py  GetAllTilesCoord.py  Main.py  PrepareRdata.py  Traverse_To_Pgsql_2.py  config.py  getTrees_fun.py  updateSolr.py  utils.py
tree/attic/: GetAllTilesCoord.eukonly.py  Traverse_To_Pgsql_eukonly.py  configure.sh
